--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,12 @@
     "incremental": true
   },
   "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+  "next-env.d.ts",
+  "global.d.ts",
+  "**/*.ts",
+  "**/*.tsx",
+  ".next/types/**/*.ts"
+ ],
   "exclude": [
     "node_modules"
   ]
