--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@types/google.maps": "^3.58.1",
     "leaflet": "1.9.4",
-    "polyline": "0.2.0"
+    "next": "14.2.5",
+    "polyline": "0.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.6.3",
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22"
+    "@types/react-dom": "18.2.22",
+    "typescript": "5.6.3"
   }
 }
