--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/google.maps": "^3.58.1",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "leaflet": "1.9.4",
     "next": "14.2.5",
     "polyline": "0.2.0",
